--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 /Details
+/Details_TinyThreat
+/Auctionator
+/ClassicCodex
+/Guidelime
+/Guidelime_Bustea's 1-60 leveling
+/Guidelime_JudgementAlliance1-60
+/Guidelime_Sage
+/Questie
+/RealMobHealth
+/!BaudErrorFrame
